<resources>
    <string name="app_name">Crypto Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- activities titles -->
    <string name="title_activity_settings">Settings</string>

    <!-- Dialog -->
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Error</string>
    <string name="error_message">Could not connect to the server</string>

    <string name="loading">Loading…</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="title_fav_coins">Favourites</string>
    <string name="title_all_coins">All Coins</string>
    <string name="news">News</string>
    <string name="converter">Currency Converter</string>
    <string name="connect">Contact Us</string>
    <string name="search">Search</string>
    <string name="rang">Rank</string>
    <string name="usd_symbol">$</string>
    <string name="cap">Cap</string>
    <string name="item_1h">1h %</string>
    <string name="sort">Sorting</string>
    <string name="currency">Currency</string>
    <string name="edit">Favourites</string>

    <!-- Coin info card -->
    <string name="global_info">Global Info</string>
    <string name="markets">Markets</string>
    <string name="price">Price</string>
    <string name="market_cap">Market Cap</string>
    <string name="available_supply">Available Supply</string>
    <string name="max_supply">Max Supply</string>
    <string name="volume_24_hours">Volume (24 hours)</string>
    <string name="percent_change_1_hour">Percent Change (1 hour)</string>
    <string name="percent_change_24_hours">Percent Change (24 hours)</string>
    <string name="percent_change_7_days">Percent Change (7 days)</string>
    <string name="_6_hours">6h</string>
    <string name="_1_day">1d</string>
    <string name="_7_days">7d</string>
    <string name="_1_month">1m</string>
    <string name="_6_months">6m</string>
    <string name="_1_year">1y</string>
    <string name="arrow_up">ꜛ</string>
    <string name="arrow_down">ꜜ</string>
    <string name="no_available_markets">No available markets</string>

    <!-- Settings Strings -->
    <string name="night_mode">Night Mode</string>
    <string name="switch_on_to_enable_night_mode">Switch on to enable Night Mode</string>
    <string name="switch_off_to_disable_night_mode">Switch off to disable Night Mode</string>
    <string name="enable_night_mode">Enable Night Mode</string>
    <string name="automatic_night_mode">Automatic Night Mode</string>
    <string name="automatically_toggles_night_mode">Automatically toggles Night Mode depending on the time</string>
    <string name="categ_other">Other</string>
    <string name="pref_all_screen_value">0</string>
    <string name="pref_fav_screen_value">1</string>
    <string name="main_screen_title">Main Screen</string>
    <string name="tap_to_select_the_main_screen">Tap to select the main screen</string>
    <string name="when_the_price_will_be_more_than">when the price will be more than</string>
    <string name="when_the_price_will_be_less_than">when the price will be less than</string>

    <!-- // -->
    <string-array name="array_main_screen_labels">
        <item>@string/title_all_coins</item>
        <item>@string/title_fav_coins</item>
    </string-array>

    <string-array name="array_main_screen_values">
        <item>@string/pref_all_screen_value</item>
        <item>@string/pref_fav_screen_value</item>
    </string-array>

    <!-- /Intent strings/ -->
    <string name="send_email">Send email</string>
    <string name="market">Market</string>
    <string name="change">Change</string>

    <!--Others-->
    <string name="attention">Attention</string>
    <string name="attention_message">After changing the current currency, all the notification settings will be lost. Continue?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="don_t_ask_me_again">Don`t ask me again</string>
    <string name="price_">Price:\u0020</string>

</resources>
