<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_all_coins"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/title_all_coins" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_star_unchecked"
            android:title="@string/title_fav_coins" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_convert"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/converter" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/connect" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
