<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.chartsCoinFragment.ChartsCoinFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/divider_s"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_6_hours" />

            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_1_day" />

            <RadioButton
                android:id="@+id/rb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_7_days" />

            <RadioButton
                android:id="@+id/rb_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_1_month" />

            <RadioButton
                android:id="@+id/rb_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_6_months" />

            <RadioButton
                android:id="@+id/rb_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_button_bg"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/divider_xs"
                android:text="@string/_1_year" />

        </RadioGroup>
    </android.support.v7.widget.CardView>
</LinearLayout>

    <!--
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_sort_views"
                android:animateLayoutChanges="true"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="6">

                <TextView
                    android:id="@+id/tv_6_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_6_hours"/>

                <TextView
                    android:id="@+id/tv_1_day"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_sort_views"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_1_day"/>

                <TextView
                    android:id="@+id/tv_7_days"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_sort_views"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_7_days"/>

                <TextView
                    android:id="@+id/tv_1_month"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_sort_views"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_1_month"/>

                <TextView
                    android:id="@+id/tv_6_months"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_sort_views"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_6_months"/>

                <TextView
                    android:id="@+id/tv_1_year"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_sort_views"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/_1_year"/>
            </LinearLayout>

    -->

    <!--<com.wang.avi.AVLoadingIndicatorView--><!--android:id="@+id/loading_indicator"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--app:indicatorColor="@color/colorPrimary"--><!--android:layout_gravity="center"--><!--android:visibility="visible"--><!--app:indicatorName="BallPulseSyncIndicator" />-->
