<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.allCoinsFragment.AllCoinsFragment">

    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/ll_sort"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_sort_rank"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_enabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rang" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_sort_price"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault" />

            <View
                android:layout_width="@dimen/divider_s"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_symbol" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_sort_cap"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cap" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_sort_1h"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_1h" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="@dimen/dimen_image_button"
            android:layout_height="@dimen/dimen_image_button"
            android:layout_gravity="center_vertical|end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dimen_padding_image_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/colorToolbarItems" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_sort_views"
            android:layout_weight="1"
            android:background="@drawable/sort_enabled_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@color/colorTextDefault"
            android:textColorHint="@color/colorTextDefault" />

        <View
            android:layout_width="@dimen/divider_l"
            android:layout_height="0dp" />

        <ImageButton
            android:id="@+id/ib_close_search"
            android:layout_width="@dimen/dimen_image_button"
            android:layout_height="@dimen/dimen_image_button"
            android:layout_gravity="center_vertical|end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dimen_padding_image_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/colorToolbarItems" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_all_coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:listitem="@layout/item_coin" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>

    <!--<com.wang.avi.AVLoadingIndicatorView--><!--android:id="@+id/loading_indicator"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--app:indicatorColor="@color/colorPrimary"--><!--android:layout_gravity="center"--><!--android:visibility="visible"--><!--app:indicatorName="BallPulseSyncIndicator" />-->
