<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:orientation="vertical"
              tools:context=".ui.fragment.favouritesCoinsFragment.FavouritesCoinsFragment">

    <LinearLayout
        android:id="@+id/ll_sort_fav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_sort_rank_fav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_enabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rang"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/ll_sort_price_fav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault"/>

            <View
                android:layout_width="@dimen/divider_s"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd_symbol"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/ll_sort_cap_fav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cap"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/ll_sort_1h_fav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_sort_views"
            android:background="@drawable/sort_disabled_bg"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/ic_arrow_up_down_blcak"
                android:backgroundTint="@color/colorTextDefault"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_1h"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/iv_close_sort_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_close_black_24dp"
                android:backgroundTint="@color/colorTextDefault"/>
        </FrameLayout>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_fav_coins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:listitem="@layout/item_coin"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>

    <!--<com.wang.avi.AVLoadingIndicatorView--><!--android:id="@+id/loading_indicator"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--app:indicatorColor="@color/colorPrimary"--><!--android:layout_gravity="center"--><!--android:visibility="visible"--><!--app:indicatorName="BallPulseSyncIndicator" />-->
